multiple zip files update
